[project]
name = "ieee-fraud-detection-with-reject-mask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "ruff>=0.15.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "xgboost>=3.2.0",
]
